# cash-register-backend

./: pyproject.toml
cash-register-backend/: README.md  alembic.ini  pyproject.toml
cash-register-backend/alembic/: env.py
cash-register-backend/alembic/versions/: 2026_03_06_0238-1f655ef55b0d_create_users_table.py  2026_03_07_0217-a762411d9b9e_create_products_table.py  2026_03_07_0220-3998ae22b814_create_users_table.py  2026_03_07_0221-26213d8d69b2_create_categories_table.py  2026_03_07_0222-42887f7f993d_create_products_table.py  2026_03_11_0312-02d9d5d89240_create_payment_receipt_and_receipt_item_.py  2026_03_11_0323-55839fb37b2d_create_payment_receipt_and_receipt_item_.py
cash-register-backend/src/cash_register_backend/: __init__.py  app.py  main.py
cash-register-backend/src/cash_register_backend/application/dto/: __init__.py  category.py  product.py  receipt.py  user.py
cash-register-backend/src/cash_register_backend/application/services/: __init__.py  user.py
cash-register-backend/src/cash_register_backend/application/use_cases/: category.py  product.py  user.py
cash-register-backend/src/cash_register_backend/application/user/: __init__.py  dto.py
cash-register-backend/src/cash_register_backend/core/config/: app.py  currency_enum.py  database.py  logging.py  settings.py
cash-register-backend/src/cash_register_backend/core/utils/: __init__.py  case_converter.py  currency.py
cash-register-backend/src/cash_register_backend/domain/category/: __init__.py  entity.py  exceptions.py  repository.py
notes/: architecture.md  database-diagram.md
(+48 files in other folders)
